<resources>
    <string name="app_name">Baking App</string>
    <string name="serving">serving:</string>
    <string name="behold_our_recipies">Behold! our recipies:</string>
    <string name="title_activity_basic">basicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_details">Step Details:</string>
    <string name="the_recipie_consists_of">The recipie consists of:</string>
    <string name="preperation_steps">Preperation Steps:</string>
    <string name="appwidget_text">Baking</string>
    <string name="add_widget">Add widget</string>
    <string name="consists_of">consists of:</string>
</resources>
